# KI204

./: .gitattributes  .gitignore  EVALUATION_RESULTS.md  README.md  evaluate.sh  evaluate_model.py  test_service.sh
Resultss/: EVALUATION_RESULTS.md
quantized_llm_service/: Cargo.toml
quantized_llm_service/.cargo/: config.toml
quantized_llm_service/models/: distilgpt2_baseline.ts  distilgpt2_quantized.ts  export_summary.json
quantized_llm_service/src/: config.rs  error.rs  evaluation.rs  lib.rs  main.rs  quantization.rs  server.rs
quantized_llm_service/src/model/: loader.rs  mod.rs  registry.rs  tch_backend.rs  types.rs
scripts/: main.ipynb  prepare_model.py
